# px4_interface

./: CMakeLists.txt  README.md  package.xml  run_tests.sh
docs/: code_review_2025-09-30.md  process_manager_testing.md
include/px4_interface/: msg_converters.hpp  process_manager.hpp  px4_comm_types.hpp  px4_gateway.hpp  px4_msgs_cache.hpp
launch/: mock_px4.launch.py  px4_gateway.launch.py
msg/: BatteryStatus.msg  PoseNED.msg  PositionNED.msg  VehicleStatus.msg
scripts/: mock_px4_cache_publisher.py
src/: main.cpp  process_manager.cpp  px4_gateway.cpp  px4_gateway_new.cpp  px4_msgs_cache.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build  latest_list
test/: test_process_manager.cpp  test_px4_gateway.cpp  test_px4_msgs_cache.cpp
